# kogwistar-obsidian-sink

./: .gitignore  QUICKSTART.md  README.md  flowchart.mmd  pyproject.toml
docs/: architecture.md  obsidian_compatibility_contract.md
examples/: complex_graph_export.json  sample_events.jsonl  sample_graph_export.json
kogwistar_obsidian_sink/: cli.py
kogwistar_obsidian_sink/cdc/: event_consumer.py
kogwistar_obsidian_sink/core/: links.py  models.py  provider.py  utils.py
kogwistar_obsidian_sink/demo/: in_memory_obsidian_demo.py
kogwistar_obsidian_sink/integrations/: kogwistar_adapter.py
kogwistar_obsidian_sink/roundtrip/: safe_notes.py
kogwistar_obsidian_sink/sinks/: obsidian.py
scripts/: bootstrap-dev.sh
tests/: test_demo_vault_smoke.py  test_event_consumer.py  test_obsidian_sink.py
